# k230_traffic_detection

./: best8.kmodel  main.cc  person_fifo_protocol.h  person_fifo_writer.h  triple_cam_mosaic_person_reader.elf
triple_cam_yolo_mosaic/: CMakeLists.txt  build.sh  build_linux_fifo_reader.sh  main_linux.cpp  person_fifo_writer.cpp
